tests/tslib_syntax_off/tslib_syntax_off.exp
Error ------------------------------------------------------------------------------------------------- test.js.flow:2:7

Declaration without `declare` is not enabled. [unsupported-syntax]

   2| const foo: string; // ERROR
            ^^^^^^^^^^^


Error ------------------------------------------------------------------------------------------------- test.js.flow:5:1

Declaration without `declare` is not enabled. [unsupported-syntax]

   5| function named(a: string): string; // ERROR
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ------------------------------------------------------------------------------------------------- test.js.flow:8:1

Declaration without `declare` is not enabled. [unsupported-syntax]

   8| component Button(props: { label: string }); // ERROR
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------- test.js.flow:11:10

`import("module")` type syntax is not enabled. [unsupported-syntax]

   11| type T = import("react").Component; // ERROR
                ^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------- test.js.flow:11:10

Cannot use `Component` as a type because it is an `any`-typed value. Type `Component` properly, so it is no longer
`any`-typed, to use it as an annotation. [value-as-type]

   11| type T = import("react").Component; // ERROR
                ^^^^^^^^^^^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------- test.js.flow:15:25

Return type annotation is required for `declare class` methods. [unsupported-syntax]

   15|   constructor(x: number); // ERROR
                               


Error ------------------------------------------------------------------------------------------------ test.js.flow:20:3

Declare methods in classes are not supported. [unsupported-syntax]

   20|   constructor(x: number); // ERROR
         ^^^^^^^^^^^^^^^^^^^^^^


Error ------------------------------------------------------------------------------------------------ test.js.flow:24:1

Declaration without `declare` is not enabled. [unsupported-syntax]

       v------------------------------
   24| namespace ImplicitNS { // ERROR
   25|   const x: number;
   26| }
       ^


Error ------------------------------------------------------------------------------------------------ test.js.flow:25:9

Declaration without `declare` is not enabled. [unsupported-syntax]

   25|   const x: number;
               ^^^^^^^^^


Error ----------------------------------------------------------------------------------------------- test.js.flow:29:16

`declare export namespace` is not enabled. [unsupported-syntax]

                      v------------------------------
   29| declare export namespace ExportedNS { // ERROR
   30|   declare const y: string;
   31| }
       ^



Found 10 errors
